# Xfiles

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  SOUL.md  docker-compose.yml  openapi.yaml  xfiles.toml.example
examples/: ws_client.rs
migrations/: 001_init.sql  002_delivery_tracking.sql  003_events.sql
src/: agent.rs  api.rs  auth.rs  circuit.rs  config.rs  daemon.rs  docker.rs  event.rs  grpc.rs  lib.rs  main.rs  mcp.rs  message.rs  namespace.rs  plumber.rs  proxy.rs  queue.rs  ratelimit.rs  router.rs  state.rs  store.rs  telemetry.rs  tls.rs
src/ai/: discovery.rs  endpoints.rs  mod.rs  probe.rs
src/fs/: mod.rs  registry.rs  vnode.rs
src/net/: mod.rs  protocol.rs  transport.rs
src/quantum/: entanglement.rs  mod.rs  router.rs  state.rs
tests/: auth_test.rs  circuit_test.rs  integration_test.rs  plumber_test.rs  quantum_test.rs  queue_test.rs  ratelimit_test.rs  routing_integration_test.rs  vfs_test.rs
